--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
+
 {
-  "name": "portfolio-website",
+  "homepage": "https://.github.io/",
+  "name": "rangamanisha",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
