changed again aaa

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "homepage": "https://rangamanisha.github.io/",
+  "homepage": "https://rangamanisha.github.io/rangamanisha",
   "name": "rangamanisha",
   "version": "0.1.0",
   "private": true,
