--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "homepage": "https://rangamanisha.github.io/rangamanisha",
   "name": "rangamanisha",
@@ -11,6 +10,7 @@
     "@mui/lab": "^6.0.0-beta.23",
     "@mui/material": "^6.4.0",
     "cra-template": "1.2.0",
+    "gh-pages": "^6.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3",
@@ -21,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
