Added hamberger menu when mobile viewed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rangamanisha.github.io/rangamanisha",
+  "homepage": "https://rangamanisha.github.io",
   "name": "rangamanisha",
   "version": "0.1.0",
   "private": true,
